# simACE

./: .gitignore  .gitmodules  CITATIONS.bib  CLAUDE.md  LICENSE  OUTPUTS.md  README.md  REVIEW.md  Snakefile  benchmarks.feb27.md  distributions.md  environment.yml  epimight_heritability.md  epimightv2.md  heritability_frailty.md  improve_tetra.md  methods.md  mkdocs.yml  pack.yml  plots.md  pyproject.toml  todo.md  validation.md  weibull_tetra.cleanup.md  work_package.md
.github/workflows/: docs.yml
config/: _default.yaml  base.yaml  beck.yaml  config.yaml  cross_trait.yaml  dev.yaml  dropout.yaml  epimight_bias.yaml  epimight_bias_2M.yaml  epimight_demo.yaml  examples.yaml  extra.yaml  family.yaml  genotype_drop.yaml  heritability.yaml  increasing_E.yaml  iter_reml_bench.yaml  long.yaml  pcgc_bias_map.yaml  pcgc_bias_small.yaml  phenotype.yaml  phenotype_models.yaml  solmi.yaml  test.yaml
docs/: .~lock.simulation_scenarios.pptx#  changelog.md  family_structures.pptx  index.md  simulation_procedure.pptx  simulation_scenarios.pptx
docs/api/: analysis.md  censoring.md  core.md  index.md  phenotyping.md  plotting.md  sampling.md  simulation.md
docs/concepts/: ace-model.md  gene-drop.md  methods.md  model-fitting.md  pipeline-schema.md  project-structure.md  relationship_categories.tsv  simulation-design.md
docs/examples/: adding-shared-environment.md  am-and-heritability.md  gene-drop-architecture-sweep.md  minimal-ace.md  observed-vs-liability-h2.md  time-varying-e.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: configuration.md  interpreting-results.md  output-structure.md  phenotype-models.md  running-the-pipeline.md  subsampling-and-dropout.md
envs/: environment-unpinned.yml  environment.yml
epimight/: README.md  create_parquet.py  guide-yob.R  plot_epimight.py
fit_ace/: CITATIONS.bib  README.md  constants.py  pyproject.toml
fit_ace/bench/: __init__.py  reml.py
fit_ace/epimight/: README.md  create_parquet.py  environment.yml  epimight_bias_analysis.py  guide-yob.R  plot_epimight.py
fit_ace/exports/: __init__.py  tables.py
fit_ace/frailty/: __init__.py  frailty_stats.py  survival_stats.py  weibull_mle.py
fit_ace/iter_reml/: __init__.py  fit.py
fit_ace/kinship/: __init__.py  kinship_pcs.py
fit_ace/ltm/: __init__.py
fit_ace/pafgrs/: kinship_fast.py  pafgrs.py  pafgrs_bivariate.py  pafgrs_metrics.py
fit_ace/phenotyping/: __init__.py  gaussian_ace.py
fit_ace/plotting/: plot_epimight_bias.py  plot_frailty.py  plot_pafgrs.py  plot_simple_ltm.py
fit_ace/sparse_reml/: __init__.py  fit.py
fit_ace/stan/: ace_dii.stan  fit_ace.py  fit_dii.py  fit_pedigree_ace.stan  fit_pedigree_ace_reml.stan  fit_reml.py  fit_stan.py  utils.py  weibull_pedigree.stan
notebooks/: basic_sim.ipynb
notes/: iter_reml_binary_phase3_d1_derivation.md  iter_reml_binary_phase3_pxem.plan.md  iter_reml_binary_phase4_mcem.plan.md  iter_reml_phase3_d6_findings.md  iter_reml_phase3_ship_ready.md  iter_reml_phase4_m1_findings.md  iter_reml_phase4_m32_m5.plan.md  iter_reml_phase4_m4_findings.md  iter_reml_phase5_m1_findings.md  iter_reml_phase5_m1_validation.plan.md  iter_reml_phase5_m2_reference_values.md  iter_reml_phase5_m2_regression.plan.md  iter_reml_phase5_m3_se_loglik.plan.md  iter_reml_phase5_m4_sparse_gibbs.plan.md  iter_reml_phase5_roadmap.md  iter_reml_tooling_gaps.md  obs_liability_scale_heritability.md  pcgc_phase1_bias.md  pcgc_phase1_scale.md  phase5_m1_mcem_dev_grid.tsv  relationship_categories.tsv
notes/PCGC/: apr21.performance_summary.md  phase2_bias_derivation.md  phase3_correction_landing_plan.md  phase3_m0_se_honesty.md
presentations/: simace_presentation.md
scripts/: bench_pipeline.py  bench_stats.py  generate_bivariate_sweep.py  migrate_atlas_captions.py  migrate_prevalence_keys.py  regen_rulegraph.sh  run_epimight.py
sim_ace/: __init__.py  _numba_utils.py  censor.py  cli_base.py  compute_hazard_terms.py  dropout.py  gather.py  ltm_falconer.py  pafgrs.py  pedigree_graph.py  phenotype.py  plot_atlas.py  plot_correlations.py  plot_distributions.py  plot_epimight_bias.py  plot_liability.py  plot_pafgrs.py  plot_pedigree_counts.py  plot_phenotype.py  plot_pipeline.py  plot_simple_ltm.py  plot_table1.py  plot_threshold.py  plot_validation.py  prepare.py  sample.py  simple_ltm_stats.py  simulate.py  stats.py  survival_corr.py  threshold.py  threshold_stats.py  utils.py  validate.py
sim_ace/analysis/: __init__.py  export_grm.py  export_tables.py  gather.py  ltm_falconer.py  simple_ltm_stats.py  stats.py  survival_stats.py  validate.py
sim_ace/censoring/: censor.py
sim_ace/core/: _numba_utils.py  cli_base.py  compute_hazard_terms.py  kinship.py  kinship_pcs.py  parquet_to_tsv.py  pedigree_graph.py  utils.py  weibull_mle.py
sim_ace/phenotyping/: __init__.py  bimodal_phenotype.py  gaussian_ace.py  phenotype.py  threshold.py
sim_ace/plotting/: __init__.py  plot_atlas.py  plot_correlations.py  plot_distributions.py  plot_grm_pcs.py  plot_liability.py  plot_pedigree_counts.py  plot_phenotype.py  plot_pipeline.py  plot_simple_ltm.py  plot_style.py  plot_table1.py  plot_utils.py  plot_validation.py
sim_ace/sampling/: __init__.py  dropout.py  sample.py
sim_ace/simulation/: __init__.py  simulate.py
simace/: __init__.py  config.py
simace/analysis/: gather.py  stats.py  validate.py
simace/censoring/: __init__.py  censor.py
simace/core/: __init__.py  _kinship_kernel.py  _numba_utils.py  cli_base.py  numerics.py  (+11 more)
tests/: conftest.py  test_censor.py  test_compute_hazard.py  test_config.py  test_config_loader.py  test_dropout.py  test_edge_cases.py  test_gather_cli.py  test_integration.py  test_mate_correlation.py  test_migrate_prevalence_keys.py  test_pafgrs.py  test_pedigree_graph.py  test_phenotype.py  test_plot_helpers.py  test_plot_smoke.py  test_regression.py  test_sample.py  test_simulate.py  test_statistical.py  test_stats.py  test_stats_computations.py  test_summarize_validations.py  test_survival_corr.py  test_threshold.py  test_workflow_scripts.py
workflow/: Snakefile  analyze.smk  common.py  simulate.smk
(+267 files in other folders)
