[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-ace"
version = "0.1.0"
description = "ACE pedigree simulation with A/C/E variance components"
requires-python = ">=3.10"
dependencies = [
    "numpy", "scipy", "pandas", "pyarrow", "pyyaml",
    "matplotlib", "seaborn",
]

[project.optional-dependencies]
accel = ["numba"]
dev = ["snakemake", "snakefmt", "pytest", "ruff>=0.8"]

[project.scripts]
sim-ace-simulate = "sim_ace.simulation.simulate:cli"
sim-ace-phenotype = "sim_ace.phenotyping.phenotype:cli"
sim-ace-threshold = "sim_ace.phenotyping.threshold:cli"
sim-ace-sample = "sim_ace.sampling.sample:cli"
sim-ace-validate = "sim_ace.analysis.validate:cli"
sim-ace-phenotype-stats = "sim_ace.analysis.stats:cli"
sim-ace-simple-ltm-stats = "sim_ace.analysis.simple_ltm_stats:cli"
sim-ace-gather = "sim_ace.analysis.gather:cli"
sim-ace-plot-phenotype = "sim_ace.plotting.plot_phenotype:cli"
sim-ace-plot-simple-ltm = "sim_ace.plotting.plot_simple_ltm:cli"
sim-ace-plot-validation = "sim_ace.plotting.plot_validation:cli"

[tool.setuptools.packages.find]
include = ["sim_ace*"]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = [".snakemake", "fit_ace/epimight/EPIMIGHT", "notes"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "SIM", "RUF", "A", "C4", "PT", "PIE", "PERF", "TCH", "RSE", "RET"]
ignore = [
    "E501",   # line too long — formatter handles wrapping
    "SIM108", # use ternary — often less readable
    "RUF002", # ambiguous unicode in docstring — scientific notation (×)
    "RUF003", # ambiguous unicode in comment — scientific notation (×)
    "C408",   # unnecessary dict() call — dict() more readable in matplotlib bbox= kwargs
]

[tool.ruff.lint.per-file-ignores]
"workflow/scripts/*.py" = ["F821", "B018"]  # snakemake global injected at runtime; bare name check idiom
"tests/*.py" = ["B011", "RUF012"]            # assert False; mutable class attrs OK in tests
"fit_ace/stan/*.py" = ["F821", "B018"]       # experimental scripts, pre-existing issues
"sim_ace/__init__.py" = ["F401"]             # setup_logging used via re-export
"sim_ace/plotting/plot_phenotype.py" = ["E402"]      # yaml_loader() before imports
"sim_ace/plotting/plot_simple_ltm.py" = ["E402"]     # yaml_loader() before imports
"sim_ace/plotting/plot_validation.py" = ["E402"]     # yaml_loader() before imports

[tool.ruff.lint.isort]
known-first-party = ["sim_ace", "fit_ace"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
