[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fit-ace"
dynamic = ["version"]
description = "Statistical model fitting for ACE pedigree simulation data"
requires-python = ">=3.10"
dependencies = [
    "sim-ace",
    "numpy", "scipy", "pandas", "pyarrow",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["fit_ace*"]

[tool.setuptools_scm]
root = ".."
