[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fit-ace"
dynamic = ["version"]
description = "Statistical model fitting for ACE pedigree simulation data"
requires-python = ">=3.10"
dependencies = [
    "sim-ace",
    "numpy>=2.2,<3",
    "scipy>=1.14,<2",
    "pandas>=3.0,<4",
    "pyarrow>=17,<24",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.9,<4",
]

[tool.setuptools.packages.find]
include = ["fit_ace*"]

[tool.setuptools_scm]
root = ".."
